force-app/main/default/objects/UsersAccessingHPC__c/UsersAccessingHPC__c.object-meta.xml
<CustomObject>
    <label>UsersAccessingHPC</label>
    <nameField>
        <displayFormat>H-{0000}</displayFormat>
        <label>UsersAccessingHPC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UsersAccessingHPCs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>