force-app/main/default/objects/UsersAccessingHPC__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>UsersAccessingHPCs</relationshipLabel>
    <relationshipName>UsersAccessingHPCs</relationshipName>
    <type>Lookup</type>
</CustomField>