force-app/main/default/objects/UsersAccessingHPC__c/fields/EventIdentifier__c.field-meta.xml
<CustomField>
    <fullName>EventIdentifier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EventIdentifier</label>
    <length>200</length>
    <type>Text</type>
</CustomField>