force-app/main/default/objects/UsersAccessingHPC__c/fields/LightningURIID__c.field-meta.xml
<CustomField>
    <fullName>LightningURIID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LightningURIID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>