force-app/main/default/objects/UsersAccessingHPC__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Operation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>