force-app/main/default/objects/UsersAccessingHPC__c/fields/QueriedEntities__c.field-meta.xml
<CustomField>
    <fullName>QueriedEntities__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QueriedEntities</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>